# udpiq

./: README.md
udpiq/: alsa.c  alsa.h  main.c  meson.build
udpiq.xcodeproj/: project.pbxproj
udpiq.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
